--- a/WEB/.env
+++ b/WEB/.env
@@ -1,1 +1,2 @@
-APi_Key = "AIzaSyApUNCa_x6MQAAWGCBGaSC3n5GTvdVk2Us"
+REACT_APP_API_KEY = "AIzaSyApUNCa_x6MQAAWGCBGaSC3n5GTvdVk2Us"
+REACT_APP_LOCAL = "http://192.168.7.183:8000"
