--- a/WEB/package.json
+++ b/WEB/package.json
@@ -9,7 +9,6 @@
     "@testing-library/user-event": "^13.5.0",
     "@vis.gl/react-google-maps": "^1.0.0",
     "axios": "^1.6.8",
-    "dotenv": "^16.4.5",
     "framer-motion": "^11.1.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -41,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "dotenv": "^16.4.5"
   }
 }
