--- a/WEB/.env
+++ b/WEB/.env
@@ -1,2 +1,2 @@
 REACT_APP_API_KEY = "AIzaSyApUNCa_x6MQAAWGCBGaSC3n5GTvdVk2Us"
-REACT_APP_LOCAL = "http://192.168.45.183:8000"
+REACT_APP_LOCAL = "http://localhost:8000"
